Update RPII-Legal Identity and Roma Populations.Rmd

--- a/RPII-Legal Identity and Roma Populations.Rmd
+++ b/RPII-Legal Identity and Roma Populations.Rmd
@@ -324,11 +324,166 @@ interact_plot(model2, pred = Index_Disabled_Child_R, modx = Index_Mother_Disable
 write.csv(merged_data, "merged_data_with_predicted_probabilities.csv", row.names = FALSE)
 ```
 
+install.packages("dplyr")
+library(dplyr)
+hhr <- read.csv("path_to_your_file.csv")
 
 
+# Recoding control variable for religion of the head of the household to determine whether the household follows any religion or follows atheism 
+# creating new variable HouseHead_Religiosity_R for the control variable
+# Based on the values on HC1A, the variable is assigned 0, if the response is =7 (7 represenets no religion)
+# Based on HC1A, the variable is assigned 1, if the resposnse is= 1,2,3,4 0r 6 (each resposne corresponds affiliation to a certain religion)
+# for any other values, NA is alloted 
+
+hh <- hh %>%
+  mutate(
+    HouseHead_Religiosity_R = case_when(
+      HC1A %in% c(1, 2, 3, 4, 6) ~ 1,   # Recode to 1 if HC1A is 1, 2, 3, 4, or 6
+      HC1A == 7 ~ 0,                    # Recode to 0 if HC1A is 7
+      TRUE ~ NA_real_                   # Assign NA for any other values or missing data
+    )
+  ) %>%
+  relocate(HouseHead_Religiosity_R, .after = HC1B)  # Move the new variable to be right after HC1B
+  
+# creating a new control variable for desire of the last birth desire_for_lastbirth_r
+# creating a new variable by using DB1 and DB2 
+# DB1=CM17 represents if there was a live birth in the last 2 years; if yes, value=1 and if no, value=2 
+# DB2 represents whether the last preganancy was wanted or not; if yes, value=1 and no, value=2
+# the condition for new variable is if CM17=1 and DB2=1, then, desire for birth is yes and is recoded to 1
+# condition 2 is, if CM17=1  and DB2=2 then, desire for preganancy is no and is recoeded to 0
+# lastly, if the response to CM17=2, then, there was no pregnancy so, the value is recoded to NA. 
+
+wm <- wm %>%
+  mutate(
+    desire_for_lastbirth_r = case_when(
+      CM17 == 1 & DB2 == 1 ~ 1,   # If CM17 (DB1) is YES and DB2 is YES, assign 1
+      CM17 == 1 & DB2 == 2 ~ 0,   # If CM17 (DB1) is YES and DB2 is NO, assign 0
+      CM17 == 2 ~ NA_real_,       # If CM17 (DB1) is NO, assign NA
+      TRUE ~ NA_real_             # For any other cases, assign NA
+    )
+  ) %>%
+  relocate(desire_for_lastbirth_r, .after = DB2)  # Relocate the new variable after DB2
+
+# Creating the dummy variables based on the given subcategories
+#Ethnic_Immigration_Dummy: Indicates if the respondent felt discriminated against based on ethnic or immigration origin.
+#Sex_Dummy: Indicates if the respondent felt discriminated against based on sex.
+#Sexual_Orientation_Dummy: Indicates if the respondent felt discriminated against based on sexual orientation.
+#Age_Dummy: Indicates if the respondent felt discriminated against based on age.
+#Religion_Belief_Dummy: Indicates if the respondent felt discriminated against based on religion or belief.
+#Other_Reason_Dummy: Indicates if the respondent felt discriminated against for any other reason.
+#Assigns 1 if the discrimination is reported (value 1).
+#Assigns 0 if discrimination is not reported (value 2).
+#Assigns NA for any other case (e.g., DK or missing values).
+
+wm <- wm %>%
+  mutate(
+    Ethnic_Immigration_Dummy = case_when(
+      VT22A == 1 ~ 1,
+      VT22A == 2 ~ 0,
+      TRUE ~ NA_real_
+    ),
+    Sex_Dummy = case_when(
+      VT22B == 1 ~ 1,
+      VT22B == 2 ~ 0,
+      TRUE ~ NA_real_
+    ),
+    Sexual_Orientation_Dummy = case_when(
+      VT22C == 1 ~ 1,
+      VT22C == 2 ~ 0,
+      TRUE ~ NA_real_
+    ),
+    Age_Dummy = case_when(
+      VT22D == 1 ~ 1,
+      VT22D == 2 ~ 0,
+      TRUE ~ NA_real_
+    ),
+    Religion_Belief_Dummy = case_when(
+      VT22E == 1 ~ 1,
+      VT22E == 2 ~ 0,
+      TRUE ~ NA_real_
+    ),
+    Other_Reason_Dummy = case_when(
+      VT22X == 1 ~ 1,
+      VT22X == 2 ~ 0,
+      TRUE ~ NA_real_
+    )
+  ) %>%
+  relocate(Ethnic_Immigration_Dummy, .after = VT22X) %>%
+  relocate(Sex_Dummy, .after = Ethnic_Immigration_Dummy) %>%
+  relocate(Sexual_Orientation_Dummy, .after = Sex_Dummy) %>%
+  relocate(Age_Dummy, .after = Sexual_Orientation_Dummy) %>%
+  relocate(Religion_Belief_Dummy, .after = Age_Dummy) %>%
+  relocate(Other_Reason_Dummy, .after = Religion_Belief_Dummy)
+
+# Creating a new variable for education level among mothers: Create a new variable level_of_education_mother_r.
+# If CM1 is 1 (mother) and WB6A is 3, 4, 5, or 6 (higher education levels), set to 1 (educated): Set to 1 if the woman is a mother and has a higher level of education.
+# If CM1 is 1 (mother) and WB6A is 1, 2, or 000 (lower education levels), set to 0 (not educated): Set to 0 if the woman is a mother and has a lower level of education.
+# If CM1 is 2 (not a mother), set to NA (not applicable): Set to NA if the woman is not a mother.
+# For any other case, set to NA: Default to NA for any other cases.
+# Relocate the new variable after the WB6A column: Move the new variable to be after the WB6A column.
+
+wm <- wm %>%
+  mutate(
+    level_of_education_mother_r = case_when(
+      CM1 == 1 & WB6A %in% c(3, 4, 5, 6) ~ 1,  # If CM1=1 and WB6A is 3, 4, 5, 6, then educated (1)
+      CM1 == 1 & WB6A %in% c(1, 2, 000) ~ 0,    # If CM1=1 and WB6A is 1, 2, or 000, then not educated (0)
+      CM1 == 2 ~ NA_real_,                      # If CM1=2, then NA (not a mother)
+      TRUE ~ NA_real_                           # Any other case, assign NA
+    )
+  ) %>%
+  relocate(level_of_education_mother_r, .after = WB6A)
+
+#Create a new variable called Mother_Health_Insurance.
+# If a woman is a mother (CM1 == 1) and has health insurance (WB18 == 1), set Mother_Health_Insurance to 1 (insured).
+# If a woman is a mother (CM1 == 1) and does not have health insurance (WB18 == 2), set Mother_Health_Insurance to 0 (not insured).
+# If a woman is not a mother (CM1 == 2), set Mother_Health_Insurance to NA (not applicable).
+# For any other case, set Mother_Health_Insurance to NA.
+# Relocating the Mother_Health_Insurance variable to be immediately after the WB18 column.
+
+wm <- wm %>%
+  mutate(
+    # Creating a new variable for health insurance status among mothers
+    Mother_Health_Insurance = case_when(
+      # If CM1 is 1 (mother) and WB18 is 1 (has health insurance), set to 1 (insured)
+      CM1 == 1 & WB18 == 1 ~ 1,  
+      # If CM1 is 1 (mother) and WB18 is 2 (no health insurance), set to 0 (not insured)
+      CM1 == 1 & WB18 == 2 ~ 0,    
+      # If CM1 is 2 (not a mother), set to NA (not applicable)
+      CM1 == 2 ~ NA_real_,                      
+      # For any other case, set to NA
+      TRUE ~ NA_real_                           
+    )
+  ) %>%
+  # Relocate the new variable after the WB18 column
+  relocate(Mother_Health_Insurance, .after = WB18)
 
 
+# Calculate the total number of assistance programs received
+# Classify the families based on the assistance count
+# Relocate the new variable after the last column of interest
 
+# Create the new variable for family economic status based on social assistance responses
+
+hh <- hh %>%
+  mutate(
+    # Classify the families based on the responses to each assistance program
+    family_economic_status = case_when(
+      # Poor: Yes to 3 or more programs
+      (ST3_1 == 1) + (ST3_2 == 1) + (ST3_3 == 1) + (ST3_4 == 1) + (ST3_5 == 1) + (ST3_6 == 1) >= 3 ~ 0,
+      
+      # Average: Yes to 1 or 2 programs
+      (ST3_1 == 1) + (ST3_2 == 1) + (ST3_3 == 1) + (ST3_4 == 1) + (ST3_5 == 1) + (ST3_6 == 1) >= 1 &
+      (ST3_1 == 1) + (ST3_2 == 1) + (ST3_3 == 1) + (ST3_4 == 1) + (ST3_5 == 1) + (ST3_6 == 1) <= 2 ~ 1,
+      
+      # Rich: No to all programs
+      (ST3_1 == 2) & (ST3_2 == 2) & (ST3_3 == 2) & (ST3_4 == 2) & (ST3_5 == 2) & (ST3_6 == 2) ~ 2,
+      
+      # Any other case should be treated as NA
+      TRUE ~ NA_real_
+    )
+  ) %>%
+  # Relocate the new variable after the last ST3 column
+  relocate(family_economic_status, .after = last_col())
 
 
 
